--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Fira+Sans&family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;900&family=Fira+Sans&family=Roboto&display=swap");
 
 :root {
   /* declare the color variable */
@@ -21,7 +21,7 @@
 
   --tertiary_Border_bottom: #e6ab6b;
 
-  --primary_box_shadow: 0px 0px 8px -4px;
+  --primary_box_shadow: 2px 1px 12px 7px rgba(0, 0, 0, 0.1);
 
   --box_shadow_Bottom: 0 3px 8px -5px;
 
@@ -79,6 +79,12 @@ a {
   box-sizing: border-box;
   padding: 0 1rem;
 }
+.mb-menuAnchor {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
 .heroImageContainer {
   display: none;
 }
@@ -149,21 +155,34 @@ a {
 }
 
 .messageboxWrapper {
-  border-bottom-left-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
-  border: 1px solid var(--primary_BlueShade_1);
-  background-color: var(--secondary_PinkShade_2);
-  padding: 0.5rem;
-  width: 300px;
   z-index: -1;
+  width: 100%;
   opacity: 0;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   margin: 0 auto;
+  display: flex;
+  justify-content: center;
   transition: all 0.5s ease-in-out;
   transform-origin: left top;
   transform: scaleY(0);
+}
+
+.msgwrapper {
+  background-color: white;
+  box-shadow: var(--primary_box_shadow);
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  padding: 0.5rem;
+  width: 300px;
+}
+
+#yourMsg {
+  font-size: 1.1rem;
+  letter-spacing: 1px;
+  color: var(--primary_BlueShade_1);
+  font-weight: bold;
 }
 
 .messageboxWrapper.showMsgbox {
@@ -531,6 +550,7 @@ a {
 /*#region Navigation*/
 .mb-menu-text {
   color: var(--primary_BlueShade_1);
+  margin-top: 1.02rem;
 }
 .mb-menu a {
   margin-right: 7px;
@@ -850,9 +870,9 @@ a {
 .fg-Password-parent {
   display: flex;
   height: 100vh;
-  background: url("https://picsum.photos/1200/500?random=11");
+  background: url("../img/Login_SignUp_BG.png");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -909,7 +929,11 @@ a {
 }
 
 .SendOTPBtn {
-  margin: 0 auto;
+  margin: 1rem auto;
+}
+
+.ConfirmBtn {
+  margin-top: 1rem;
 }
 
 .fg-Password-buttons.hiddenBtn {
@@ -979,12 +1003,40 @@ a {
   top: 30%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  height: 10px;
+  height: 3px;
   width: 100px;
   background-color: black;
   border-radius: 10px;
   -webkit-box-shadow: 0 4px 3px -3px black;
   box-shadow: 0 4px 3px -3px black;
+}
+.ProgressBarWrapper h1 {
+  margin: 0;
+  font-family: "Cinzel Decorative", cursive;
+  font-size: 3rem;
+  font-weight: 900;
+  color: white;
+  text-align: center;
+  padding-top: 10rem;
+}
+
+.tagline {
+  position: absolute;
+  bottom: 3rem;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  flex-direction: column;
+}
+
+.tagline h3 {
+  font-family: "Cinzel Decorative", cursive;
+  color: var(--primary_BlueShade_1);
+  text-align: center;
+  margin: 0.5rem;
+  letter-spacing: 2px;
+  font-size: 1.7rem;
 }
 
 .progressbar {
@@ -1036,9 +1088,9 @@ a {
 
 @media screen and (max-width: 600px) {
   .ProgressBarWrapper {
-    background: url("../img/Splash_Screen.png");
+    background: url("../img/Home_Genie_Splash_Screen.png");
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 100% 100%;
   }
 }
 /*#endregion Splash Screen*/
@@ -1060,7 +1112,7 @@ a {
   height: 100vh;
   background: url("../img/Login_SignUp_BG.png");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1068,7 +1120,7 @@ a {
 
 .login-grid h2 {
   font-size: 2.25rem;
-  font-weight:bold;
+  font-weight:bold !important;
 }
 
 .icon_input_wrapper {
@@ -1084,7 +1136,7 @@ a {
   max-width: fit-content;
   margin-left: auto;
   margin-right: auto;
-
+  padding: 0rem 2rem;
   border-radius: 1.5rem;
   background-color: white;
   box-shadow: var(--primary_box_shadow);
@@ -1121,15 +1173,12 @@ a {
 /* Aligning main heading*/
 .login-wrapper h1 {
   margin-bottom: 3rem;
-  padding-top: 1rem;
 }
 
 /*Aligning email input field*/
 .login-email,
 .login-password {
   margin-bottom: 1rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 
 .login-password {
@@ -1158,7 +1207,7 @@ a {
 /* Aligns forgot password link to right*/
 .login-buttons span:first-of-type {
   align-self: flex-end;
-  padding-right: 1rem;
+  margin-bottom: 1rem;
 }
 
 /*Styling login button*/
@@ -1354,10 +1403,6 @@ a {
   clear: both;
 }
 
-.about-content2 {
-  padding: 3rem 1rem;
-}
-
 .about-choose-item1,
 .about-choose-item2,
 .about-choose-item3,
@@ -1406,7 +1451,8 @@ a {
 }
 
 .about-team-wrapper h2 {
-  padding-top: 2rem;
+  font-size: 2.5rem;
+  padding-top: 1rem;
 }
 
 .about-manager,
@@ -1422,8 +1468,10 @@ a {
 .about-developers {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 1.5rem;
   justify-items: center;
+  width: fit-content;
+  margin: 0 auto;
+  grid-column-gap: 2rem;
 }
 
 .about-team-wrapper img {
@@ -1441,6 +1489,26 @@ a {
   font-size: 1.7rem;
 }
 
+.about-team-wrapper {
+  margin-bottom: 6rem;
+  margin-top: 16rem;
+  background-color: var(--secondary_PinkShade_2);
+}
+
+.about-choose-item2 .iconify,.about-choose-item4 .iconify {
+  order:2;
+  padding-right: 0;
+  padding-left: 0.5rem;
+}
+
+.about-choose-item2 p,.about-choose-item4 p {
+  order:1;
+}
+
+.about-choose-item2 .iconify {
+  padding-left: 7.5rem;
+}
+
 @media screen and (min-width: 740px) {
   .about-content1 {
     display: grid;
@@ -1456,7 +1524,6 @@ a {
 
   .about-wrapper .about-content1-content h2 {
     text-align: left;
-    margin-bottom: 2rem;
   }
 
   .about-content1-wrapper {
@@ -1484,16 +1551,38 @@ a {
 
 .about-content1-content p {
   margin-top: 0;
-  margin-bottom: 2rem;
+  margin-bottom: 4rem;
 }
 
 .about-content1-content h2 {
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .about-team img {
   width:150px;
   height:200px;
+}
+
+.about-content2 h2 {
+  background-color: white;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.about-content2 {
+  padding: 0;
+}
+
+.about-content2 p {
+ padding:4rem 2rem;
+ line-height: 1.5;
+ font-size: 1.25rem;
+}
+
+.about-choose h2 {
+  padding-top: 2rem;
 }
 
 /* .about-content1-content a {
@@ -1502,10 +1591,19 @@ a {
 
 @media screen and (min-width: 1200px) {
   .about-content1,
-  .desktop-grid,
   .about-team {
     max-width: 1400px;
     margin: 0 auto;
+  }
+
+  .about-choose h2 {
+    margin: 0;
+    padding-bottom: 1.25rem;
+  }
+
+  .desktop-grid {
+    max-width: 1400px;
+    margin: 8rem auto;
   }
 
   .about-content1 img {
@@ -1517,8 +1615,16 @@ a {
   }
 
   .about-content1-wrapper,
-  .about-content1 {
+  .about-content1, .about-content2 {
     padding: 0;
+  }
+  
+  .about-content2 p {
+    margin: 0;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    place-self: center;
+    text-align: left;
   }
 
   .desktop-grid {
@@ -1527,14 +1633,10 @@ a {
   }
 
   .about-content2 {
-    height: 60%;
+    height: 100%;
     display: grid;
     grid-template-columns: 1fr;
-  }
-
-  .about-content2 p {
-    place-self: center;
-    text-align: left;
+    grid-template-rows: 15% 85%;
   }
 
   /* .about-team {
@@ -1566,17 +1668,25 @@ a {
   }
 
   .about-team-wrapper {
-    background-color: var(--secondary_PinkShade_2);
+    margin-bottom: 8rem;
+    margin-top: 8rem;
   }
 
   .about-team {
     display: grid;
     grid-template-columns: 30% 70%;
+    width: fit-content;
+    grid-column-gap: 4rem;
   }
 
   .about-manager {
     place-self: center;
   }
+
+  .about-designers,
+.about-developers {
+  grid-column-gap:0;
+}
 }
 
 /*#endregion About Us*/
@@ -1589,7 +1699,7 @@ a {
   height: 100vh;
   background: url("../img/Login_SignUp_BG.png");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -2625,14 +2735,16 @@ form .form-class {
   padding: 1rem 2%;
 }
 .half-form .area {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  flex-flow: row wrap;
   gap: 2rem;
   line-height: 1.5;
+  width: 100%;
 }
 .area .area-city,
 .area-province {
   display: grid;
+  width: 100%;
 }
 .ListingSite-main .postal {
   display: flex;
@@ -2670,6 +2782,12 @@ form label span {
 .postal {
   margin-top: 1rem;
 }
+#address {
+  width: 100%;
+}
+.address-class{
+  width: 100%;
+}
 
 .MapsContainer {
   margin-top: 2rem;
@@ -2679,6 +2797,15 @@ form label span {
   .create-user-form {
     max-width: 1000px;
     margin: 0 auto;
+  }
+
+  #address {
+    width: 100%;
+  }
+
+  .area .area-city,
+  .area-province {
+    width: unset;
   }
 
   .ListingSite-main .heading {
@@ -2728,6 +2855,10 @@ form label span {
   .payment .checkbox-buttons .label_checkbox_wrapper {
     justify-content: center;
   }
+}
+
+#default-img {
+  width: 10rem;
 }
 
 /* #endregion CreateListing */
