--- a/css/styles.css
+++ b/css/styles.css
@@ -1408,11 +1408,19 @@ a {
 .about-choose-item3,
 .about-choose-item4 {
   border-radius: 10px;
-  margin: 2rem 2rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  margin-top: 0;
   width: 50%;
   display: flex;
   flex-flow: row nowrap;
   place-items: center;
+}
+
+.about-choose-item1,
+.about-choose-item2,
+.about-choose-item3 {
+  margin-bottom: 2rem;
 }
 
 .about-choose-item1 span i,
@@ -1476,7 +1484,7 @@ a {
 
 .about-team-wrapper img {
   filter: grayscale(100%);
-  border-radius: 50%;
+  /* border-radius: 50%; */
 }
 
 .about-designers h3,
@@ -1486,27 +1494,14 @@ a {
 
 .about-choose .iconify {
   padding-right: 1rem;
-  font-size: 1.7rem;
+  font-size: 2.5rem;
 }
 
 .about-team-wrapper {
   margin-bottom: 6rem;
   margin-top: 16rem;
+  padding-bottom: 1rem;
   background-color: var(--secondary_PinkShade_2);
-}
-
-.about-choose-item2 .iconify,.about-choose-item4 .iconify {
-  order:2;
-  padding-right: 0;
-  padding-left: 0.5rem;
-}
-
-.about-choose-item2 p,.about-choose-item4 p {
-  order:1;
-}
-
-.about-choose-item2 .iconify {
-  padding-left: 7.5rem;
 }
 
 @media screen and (min-width: 740px) {
@@ -1582,7 +1577,7 @@ a {
 }
 
 .about-choose h2 {
-  padding-top: 2rem;
+  padding-top: 1.5rem;
 }
 
 /* .about-content1-content a {
@@ -1590,6 +1585,25 @@ a {
 } */
 
 @media screen and (min-width: 1200px) {
+
+.about-choose-item1,
+.about-choose-item2,
+.about-choose-item3,
+.about-choose-item4 { 
+  margin-left: 4rem;
+  margin-right: 0;
+}
+
+  .about-content2 h2 {
+    background-color: var(--about_us_BlueShade_4);
+    padding-bottom: 0;
+  }
+
+  .about-content2 p{
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
   .about-content1,
   .about-team {
     max-width: 1400px;
@@ -1636,7 +1650,7 @@ a {
     height: 100%;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 15% 85%;
+    grid-template-rows: 10% 90%;
   }
 
   /* .about-team {
@@ -1676,7 +1690,6 @@ a {
     display: grid;
     grid-template-columns: 30% 70%;
     width: fit-content;
-    grid-column-gap: 4rem;
   }
 
   .about-manager {
@@ -1685,7 +1698,8 @@ a {
 
   .about-designers,
 .about-developers {
-  grid-column-gap:0;
+  padding-left:4rem;
+  grid-column-gap: 0 ;
 }
 }
 
