Changes in logo

--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,7 @@ a {
 .LogoContainer {
   display: flex;
   justify-content: start;
+  align-items: center;
 }
 .text_btn_wrapper {
   background-color: var(--primary_BlueShade_1);
@@ -139,8 +140,8 @@ a {
 }
 
 .LogoContainer img {
-  height: auto;
-  width: 110px;
+  height: 70px;
+  width: 100px;
 }
 
 #ShowNotificationPopUp img,
