--- a/css/styles.css
+++ b/css/styles.css
@@ -208,12 +208,6 @@ a {
   margin: 0 auto;
 }
 
-.hero_Image {
-  width: 100%;
-  height: 450px;
-  margin: 0 1rem;
-  object-fit: cover;
-}
 .ViewListing {
   cursor: pointer;
   margin: 0;
@@ -328,6 +322,13 @@ a {
 
 .footer_Area {
   padding: 1rem 1rem 0 1rem;
+  /* background: rgb(0, 108, 132);
+  background: linear-gradient(
+    298deg,
+    rgba(0, 108, 132, 1) 0%,
+    rgba(9, 9, 121, 1) 100%,
+    rgba(11, 11, 215, 1) 100%
+  ); */
   background-color: var(--primary_BlueShade_1);
   color: white;
 }
@@ -367,7 +368,7 @@ a {
   width: 120px;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 750px) {
   .mb-UserGreetingContainer {
     display: none;
   }
@@ -434,7 +435,7 @@ a {
 
 .hero_Image {
   width: 100%;
-  height: 400px;
+  height: 500px;
   object-fit: cover;
 }
 
@@ -510,7 +511,7 @@ a {
   margin-top: 12px;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 750px) {
   .img_info_container img {
     width: 100%;
     height: 250px;
@@ -542,6 +543,7 @@ a {
   }
   .heroImageContainer {
     display: flex;
+    padding: 0 1rem;
     justify-content: center;
     align-items: center;
   }
@@ -659,7 +661,7 @@ a {
 
 .ownerNotification:hover,
 .customerNotification:hover {
-  background-color: var(--secondary_PinkShade_2);
+  background-color: var(--tertiary_ColorShade_1);
 }
 
 .Notification_id1 {
@@ -2113,7 +2115,8 @@ a {
   display: grid;
   margin: 0 auto;
   grid-template-columns: 1fr;
-  height: 100%;
+  grid-template-rows: max-content;
+  height: 100vh;
 }
 
 .card {
@@ -2183,6 +2186,8 @@ a {
   margin: 0 auto;
   grid-template-columns: 1fr;
   gap: 1rem;
+  height: 100vh;
+  grid-template-rows: max-content;
   text-align: center;
   justify-items: center;
 }
