--- a/css/styles.css
+++ b/css/styles.css
@@ -305,6 +305,7 @@ a {
 .Search_field_Icon_Container input[type="text"] {
   color: black;
   border-bottom: 1px var(--primary_BlueShade_1);
+  text-align: center;
 }
 .searchlink {
   color: var(--primary_BlueShade_1);
@@ -507,11 +508,20 @@ a {
 }
 .Search_field_Icon_Container input[type="text"] {
   border-bottom: 3px solid var(--primary_BlueShade_1);
-  width: 170px;
   margin-top: 12px;
+  text-align: center;
+  width: 110px;
+}
+
+#categories {
+  width: 170px;
 }
 
 @media screen and (min-width: 750px) {
+  .Search_field_Icon_Container input[type="text"] {
+    width: 170px;
+    text-align: center;
+  }
   .img_info_container img {
     width: 100%;
     height: 250px;
@@ -540,6 +550,7 @@ a {
   #categories {
     background-color: var(--primary_BlueShade_1);
     color: white;
+    width: max-content;
   }
   .heroImageContainer {
     display: flex;
