--- a/css/styles.css
+++ b/css/styles.css
@@ -575,7 +575,6 @@ a {
 .mb-menu ul {
   padding: 0;
   list-style: none;
-  margin: 2px;
 }
 .mb-menu li {
   display: flex;
@@ -759,9 +758,20 @@ a {
   font-size: 1.5rem;
 }
 
+.ShowLoginControls {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: none !important;
+}
+
+.ShowLoginControls.activeLoginControls {
+  display: unset !important;
+}
+
 .subProfileMenu {
   position: absolute;
-  right: 5px;
+  right: 15px;
   top: 40px;
   margin-top: 1.5rem;
   background-color: white;
@@ -773,6 +783,7 @@ a {
   z-index: -1;
   transition: all 0.5s ease-in-out;
 }
+
 .subProfileMenu.activeProfileMenu {
   opacity: 1;
   z-index: 2;
